# gnyprland

./: Cargo.toml  README.md  bacon.toml  build.rs
.zed/: tasks.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/hyprland/: Cargo.toml  README.md
crates/hyprland/src/: command.rs  error.rs  event.rs  lib.rs  listener.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs  message.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: bar.rs  lib.rs  prelude.rs
crates/ui/src/bar/: datetime.rs  window.rs  workspace.rs
crates/ui/src/bar/workspace/: active.rs  indicator.rs  open.rs  slider.rs
crates/ui/src/center_menu/: mod.rs  notifications.rs
crates/ui/src/center_menu/notifications/: daemon.rs  model.rs  widget.rs  worker.rs
crates/ui/src/css/: env.rs  mod.rs  watch.rs
crates/ui/src/menu/: mod.rs  open.rs  overlay.rs
crates/ui/src/menu/center/: mod.rs
crates/ui/src/overlays/: active.rs  clickoff.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/render/: field.rs  mod.rs  widget.rs
macros/src/widget/: mod.rs
src/: consts.rs  main.rs  prelude.rs
src/bar/: mod.rs  window.rs
src/binding/: data.rs  mod.rs  variable.rs
src/css/: error.rs  mod.rs  watch.rs
src/ggc/: mod.rs
src/services/: mod.rs
src/ui/: mod.rs
src/ui/bar/: datetime.rs  mod.rs  window.rs  workspace.rs
src/ui/components/: interactable.rs  mod.rs
src/variables/: mod.rs
styles/: colors.scss  index.scss  prelude.scss
styles/bar/: activewindow.scss  activeworkspace.scss  datetime.scss  index.scss  prelude.scss
styles/barmenu/: index.scss  notifications.scss
styles/barmenu/datemenu/: calendar.scss  card.scss  date.scss  events.scss  index.scss  weather.scss
styles/menu/: center.scss  index.scss  overlay.scss
widget/: Cargo.toml
widget/src/: field.rs  lib.rs  widget.rs
