[package]
name = "gnyprland"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes", "unstable"] }
futures = "0.3.31"
lazy_static = "1.5.0"
notify = "7.0.0"
serde = "1.0.215"
serde_json = "1.0.132"
thiserror = { git = "https://github.com/onlycs/thiserror" }

[dependencies.astal]
git = "https://github.com/onlycs/astal-rs"

[dependencies.astal-io]
git = "https://github.com/onlycs/astal-rs"

[dependencies.astal-hyprland]
git = "https://github.com/onlycs/astal-rs"

[dependencies.gtk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.macros]
workspace = true

[workspace]
members = [".", "macros"]
default-members = ["."]

[workspace.dependencies.macros]
path = "macros"
