[package]
name = "gnyprland-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4-layer-shell = "0.5.0"
relm4 = { version = "0.9.1", default-features = false, features = [
    "gnome_46",
    "macros",
] }
thiserror = { git = "https://github.com/onlycs/thiserror" }
map-macro = "0.3.0"
cfg-if = "1.0.0"
log = "0.4.27"
gnyprland-relay = { version = "0.1.0", path = "../relay" }
smol = "2.0.2"
notify = "8.0.0"
chrono = "0.4.41"
hyprland = { version = "0.1.0", path = "../hyprland" }
